fix both pdf links, fix nav bar
added the new link for the pdf for the nav bar and fixed nav bar being misaligned with top of page

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -34,10 +34,13 @@ div {
     width: 100vw;
     height: 100vh;
 }
-
+/*
+nav bar width, size, and position
+*/
 .nav-bar {
     position: fixed;
     width: 100%;
+    top: 0;
     height: auto;
     padding: px 24px;
 }
